# swain

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PURPOSE.md  README.md  ROADMAP.md  SESSION-ROADMAP.md  TEARDOWN-REPORT.md  THIRD_PARTY_NOTICES  ac1-test.md  ac1-trunk-advance.md  fix_duplicates.py  pyproject.toml  relay.py  skills-lock.json  swain-box  swain.settings.json
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/docs/: agentrc-implementation-spec.md  agentrc-phase1-plan.md  agentrc-phase3-design.md  agentrc-phase3-plan.md  ascii-animations-design.md  tmux-workflow-design-spec.md
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/docs/audits/: backlog.md  code-quality.md  performance.md  product-spec.md  rust-impl.md  security.md  test-coverage.md
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/skill/agentrc/: SKILL.md  claude-md-section.md  task-brief.md  worker-seed.txt
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/: audit.rs  events.rs  lib.rs  main.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/commands/: amend.rs  audit.rs  checkpoint.rs  dashboard.rs  events.rs  init.rs  install.rs  integrate.rs  layout.rs  mod.rs  plan.rs  respawn.rs  resume.rs  run.rs  spawn.rs  status.rs  teardown.rs  watch.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/detect/: mod.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/fs/: bus.rs  frontmatter.rs  mod.rs  run.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/git/: wrapper.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/model/: config.rs  error.rs  event.rs  mod.rs  run.rs  task.rs  worker.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/tmux/: wrapper.rs
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/src/tui/: action.rs  app.rs  (+4 more)
docs/troves/agentrc-claude-orchestrator/sources/agentrc-repo/tests/: amend_test.rs  audit_test.rs  checkpoint_test.rs  cli_smoke_test.rs  dashboard_test.rs  detect_test.rs  events_test.rs  fault_injection.rs  fs_test.rs  git_test.rs  happy_path.rs  init_test.rs  install_test.rs  integrate_test.rs  layout_test.rs  model_test.rs  plan_test.rs  respawn_test.rs  resume_test.rs  run_test.rs  spawn_test.rs  status_test.rs  teardown_test.rs  tmux_test.rs  watch_test.rs  worker_commands_test.rs
(+3820 files in other folders)
