[project]
name = "untethered"
version = "0.1.0"
description = "Untethered Operator — chat bridge for steering agentic sessions"
requires-python = ">=3.11"
dependencies = [
    "zulip>=0.9.0",
]

[project.scripts]
untethered-host = "untethered.main:main"
untethered-zulip-chat = "untethered.plugins.zulip_chat:main"
untethered-project-bridge = "untethered.plugins.project_bridge:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
