[project]
name = "swain-helm"
version = "0.1.0"
description = "swain-helm — watchdog and project bridges for steering agentic sessions from any device"
requires-python = ">=3.11"
dependencies = [
    "zulip>=0.9.0",
]

[project.scripts]
swain-helm-zulip-chat = "swain_helm.plugins.zulip_chat:main"
swain-helm-opencode = "swain_helm.adapters.opencode_server:main"
swain-helm-claude = "swain_helm.adapters.claude_code:main"
swain-helm-tmux = "swain_helm.adapters.tmux_pane:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
