[package]
name = "agentrc"
version = "0.1.0"
edition = "2021"
description = "Orchestrate multiple Claude Code workers in tmux panes"
license = "MIT"

[[bin]]
name = "agentrc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
duct = "0.13"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
filetime = "0.2"
